--- a/app/src/main/res/drawable/card.xml
+++ b/app/src/main/res/drawable/card.xml
@@ -3,9 +3,11 @@
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-<size  android:height="450dp" />
+<size  android:height="400dp" />
     <corners android:bottomLeftRadius="75dp"
          android:bottomRightRadius="75dp"
+        android:topLeftRadius="75dp"
+        android:topRightRadius="75dp"
         />
     <solid  android:color="@color/clouds"
         />
